# mysql-kafka-applier

./: .gitignore  BinlogEvent.cpp  BinlogEvent.h  CMakeLists.txt  ComparisonValues.h  Kafka.cpp  Kafka.h  MyBinlog.cpp  MyBinlog.h  MyContentHandler.cpp  MyContentHandler.h  MyEvent.cpp  MyEvent.h  README.md  main.cpp
